# deep-datachallenge

./: .gitignore  README.md  data_exploration.ipynb  predict.py  presentation.ipynb  pyproject.toml  train.py
Rapport/: benchmark.tex  intro.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  prem_modele.tex  prise_en_main_donnees.tex
Rapport/Configuration/: config.tex
deep_datachallenge/: data_loader.py  dataset.py  metrics.py  preprocessing.py  trainer.py
deep_datachallenge/models/: __init__.py  conv_block.py  simple.py  unet.py
tests/: test_pipeline.py
