[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slb-well-segmentation"
version = "0.1.0"
description = "SLB Well Casing and TIE Segmentation Challenge"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "No license"}
authors = [
    {name = "Data Challenge Team: Víctor Camps Abarca - Aldric Bahna", email = "victor.camps@eleves.ec-nantes.fr"}
]

dependencies = [
    # Core data science and numerical computing
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    
    # Visualization
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    
    # Machine learning and deep learning
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    
    # Image processing
    "pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "albumentations>=1.1.0",
    
    # Utilities
    "tqdm>=4.62.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "joblib>=1.1.0",
    
    # Development and notebooks
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
    "mypy>=0.910",
]

[tool.setuptools]
packages = ["deep_datachallenge"]

[tool.setuptools.package-data]
deep_datachallenge = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
